--- a/css/top.css
+++ b/css/top.css
@@ -1,51 +1,4 @@
-html,
-body {
-    margin: 0;
-    /* 余白の削除 */
-    padding: 0;
-    /* 余白の削除 */
-    width: 100%;
-    height: 100%;
-}
-
-#back {
-    background: url(../img/image14.png);
-    overflow: hidden;
-    width: 100%;
-}
-
-header {
-    top: 0px;
-    /* 位置(上0px) */
-    left: 0px;
-    /* 位置(右0px) */
-    width: 100%;
-    /* 横幅100%　*/
-    height: 90px;
-    /* 縦幅140px */
-    background: url(../img/image14.png);
-}
-
-.property span {
-    font-family: fantasy;
-}
-
-#nav ul li {
-    display: inline;
-    margin: 12px;
-}
-
-ul {
-    list-style: none;
-    color: #333;
-}
-
-ul li {
-    font-family: cursive;
-    font-size: 18px;
-}
-
-article.top {
+/* article.top {
     width: 1300px;
     margin: 0 auto;
 }
@@ -63,37 +16,19 @@ article.under {
 article.foot {
     width: 1300px;
     margin: 0 auto;
+} */
+
+/* add */
+article.product_rows {
+    width: 1300px;
+    margin: 0 auto;
 }
 
-.border {
-    width: 213px;
-    border-bottom: solid 2px;
-}
 
-a {
-    text-decoration: none;
-}
 
-div#nav {
-    text-align: right;
-    padding: 22px;
-}
+/*  */
 
-section.property {
-    text-align: center;
-    margin: 2.5%;
-    padding: 15px 0;
-}
-
-.header_top a:hover img {
-    opacity: 0.7;
-}
-
-span {
-    font-size: 55px;
-}
-
-.top .box {
+/* .top .box {
     float: left;
     padding-left: 10px;
 }
@@ -114,11 +49,33 @@ span {
     float: left;
     padding-left: 10px;
 
+} */
+
+/* change class  */
+
+.product_rows .box,
+.box_middle,
+.box_under,
+.box_foot {
+    float: left;
+    padding-left: 10px;
 }
 
-img {
-    padding: 6px 7px;
+/*  */
+
+.border {
+    width: 213px;
+    border-bottom: solid 2px;
 }
+
+a {
+    text-decoration: none;
+}
+
+.header_top a:hover img {
+    opacity: 0.7;
+}
+
 
 a:hover {
     opacity: 0.7;
